[gd_scene load_steps=4 format=3 uid="uid://blqqk5lsmb5q7"]

[ext_resource type="Script" path="res://prog_54b.gd" id="1_eigq0"]
[ext_resource type="Theme" uid="uid://cv1o3wmjapddp" path="res://BigFont.tres" id="2_ufsge"]

[sub_resource type="LabelSettings" id="LabelSettings_3a4yj"]
font_size = 35

[node name="Prog_54b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eigq0")

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 62.0
offset_right = 236.0
offset_bottom = 173.0
theme = ExtResource("2_ufsge")
placeholder_text = "--"
alignment = 1

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 338.0
offset_top = 63.0
offset_right = 522.0
offset_bottom = 174.0
theme = ExtResource("2_ufsge")
placeholder_text = "--"
alignment = 1

[node name="txtNum3" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 622.0
offset_top = 62.0
offset_right = 806.0
offset_bottom = 173.0
theme = ExtResource("2_ufsge")
placeholder_text = "--"
alignment = 1

[node name="txtNum4" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 903.0
offset_top = 63.0
offset_right = 1087.0
offset_bottom = 174.0
theme = ExtResource("2_ufsge")
placeholder_text = "--"
alignment = 1

[node name="lblSum" type="Label" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 237.0
offset_right = 366.0
offset_bottom = 352.0
text = "Sum:"
label_settings = SubResource("LabelSettings_3a4yj")
vertical_alignment = 1

[node name="lblAvg" type="Label" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 342.0
offset_right = 308.0
offset_bottom = 457.0
text = "Average:"
label_settings = SubResource("LabelSettings_3a4yj")
vertical_alignment = 1

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 486.0
offset_right = 301.0
offset_bottom = 621.0
theme = ExtResource("2_ufsge")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 443.0
offset_top = 487.0
offset_right = 705.0
offset_bottom = 622.0
theme = ExtResource("2_ufsge")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 835.0
offset_top = 488.0
offset_right = 1097.0
offset_bottom = 623.0
theme = ExtResource("2_ufsge")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
